MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.5, and conda-forge-pinning 2019.09.08

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @dhirschfeld @dougalsutherland @farhantejani @ghego @gilbertfrancois @hajapy @jjhelmus @njzjz @waitingkuo
+* @dougalsutherland @farhantejani @ghego @gilbertfrancois @hajapy @jjhelmus @njzjz @waitingkuo
