--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ source:
     #- patches/0007-Add-init-symbol-names-prefixed-with-an-underscore.patch      # [osx]
     #- patches/0008-Add-alternate-clock_gettime-implementation-for-macOS.patch   # [osx]
     - patches/unbundle_llvm.patch                                               # [linux]
+    - patches/tf_generate_proto_text_sources.diff  # [linux]
 
 build:
   number: 6
