--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,3 +6,5 @@ c_compiler_version:    # [unix]
 cxx_compiler_version:  # [unix]
   - 5.4                # [linux]
   - 8.0                # [osx]
+libprotobuf:           # [linux]
+  - 3.6                # [linux]
