--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ source:
     - patches/unbundle_llvm.patch                                               # [linux]
 
 build:
-  number: 6
+  number: 7
   skip: True  # [not x86_64]
   skip: True  # [win and vc<14]
 
@@ -58,7 +58,6 @@ requirements:
     - numpy 1.13.3  # [py<37]
     - llvmdev                   # [linux]
     - zlib                      # [linux]
-    - libprotobuf               # [linux]
     - libpng                    # [linux]
     - libcurl                   # [linux]
     - nsync  # [linux]
@@ -122,7 +121,6 @@ outputs:
         - tensorflow-estimator >=1.13.0,<1.14.0a0
         # pin
         - zlib                     # [linux]
-        - libprotobuf               # [linux]
         - libpng                    # [linux]
         - libcurl                   # [linux]
       run:
@@ -136,7 +134,6 @@ outputs:
         - numpy >=1.13.3            # [not linux]
         - six >=1.10.0
         - zlib  # [linux]
-        - libprotobuf  # [linux]
         - libpng  # [linux]
         - libcurl  # [linux]
         - protobuf >=3.6.1
@@ -193,9 +190,8 @@ outputs:
       host:
         - libcurl  # [linux]
         - zlib  # [linux]
-        - libprotobuf
       run:
-        - libprotobuf
+        - libprotobuf >=3.6.1,<3.7
         - nsync
     test:
       files:
