--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.13.2" %}
+{% set version = "1.14.0" %}
 
 {% set pyver = "cp{}{}".format(PY_VER[0], PY_VER[2]) %}
 {% set platform = "macosx_10_11_x86_64" %}  # [osx] 
@@ -15,11 +15,11 @@ source:
   url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz  # [linux]
   sha256: abe3bf0c47845a628b7df4c57646f41a10ee70f914f1b018a5c761be75e1f1a9  # [linux]
   url: https://pypi.io/packages/{{ pyver }}/t/tensorflow/{{ fn }}  # [not linux]
-  sha256: ffff3545f0ade3c1d2919dfb8c9399a923d929d221e349fcd4ae5f69774996e1  # [osx and py==27]
-  sha256: 8e02c7fab31a02396cd926412762f8fd9cae3cb653be3c57797b85a95834be79  # [osx and py==36]
-  sha256: ef1566863acdfb84924e8bbfcafc8da90933ba4313f094a74086b083c7a4f776  # [osx and py==37]
-  sha256: 1e6ab2b4e2ece7747b787a5e85d01aeb8b47677fa15453417a485cde904635f7  # [win and py==36]
-  sha256: 0beda4bf6a5af64905b93988e3b878e91b13e44b42d16df439fbd3112062754d  # [win and py==37]
+  sha256: 46fc216db780b1a7b7a28cf6536d6ec0a171ef2fa546a24934ffe077c734c891  # [osx and py==27]    
+  sha256: a3851118d2cc5e9e697503753c2d247dca0e98d5a85b5ea091103f27d9e57a38  # [osx and py==36]  
+  sha256: 2fc989a5d3be9f3dc96c20deaa3d5cc66d2bf76fe069c202c2914a7f4b5a9a35  # [osx and py==37]
+  sha256: e84f2c8c7f23ad546076b1e73cec85706da19910b9a89c29cba3b64e297b2eb0  # [win and py==36]
+  sha256: a4f154fa98cde5974117e05af444e0bed84cf431b8129c78a2de03a1ff7201c9  # [win and py==37]
 
   patches:
     - patches/0001-add-rt-to-linkopts.patch                                     # [linux]
@@ -98,46 +98,50 @@ outputs:
         - pip
         - setuptools <=39.1.0
         # requirements specified by the package itself
-        - absl-py >=0.1.6
+        - absl-py >=0.7.0
         - astor >=0.6.0
         - gast >=0.2.0
+        - google_pasta >=0.1.6
         - keras-applications >=1.0.6
         - keras-preprocessing >=1.0.5
         - numpy 1.16.1
         - six >=1.10.0
         - protobuf >=3.6.1
         - termcolor >=1.1.0
+        - wrapt >=1.11.1
         - grpcio >=1.8.6
         - wheel >=0.26              # [unix]
         - mock >=2.0.0  # [py==27]
         - backports.weakref >=1.0rc1  # [py==27]
         - enum34 >=1.1.6  # [py==27]
-        - tensorflow-estimator >=1.13.0,<1.14.0a0
+        - tensorflow-estimator >=1.14.0rc0,<1.15.0a0
         # pin
         - zlib                     # [linux]
         - libpng                    # [linux]
         - libcurl                   # [linux]
       run:
         - python
-        - absl-py >=0.1.6
+        - absl-py >=0.7.0
         - astor >=0.6.0
         - gast >=0.2.0
+        - google_pasta >=0.1.6
         - keras-applications >=1.0.6
         - keras-preprocessing >=1.0.5
         - {{ pin_compatible('numpy') }}  # [linux]
-        - numpy >=1.16.1            # [not linux]
+        - numpy >=1.16.1,<2.0.0a0            # [not linux]
         - six >=1.10.0
         - zlib  # [linux]
         - libpng  # [linux]
         - libcurl  # [linux]
         - protobuf >=3.6.1
         - termcolor >=1.1.0
+        - wrapt >=1.11.1
         - grpcio >=1.8.6
         - mock >=2.0.0  # [py==27]
         - backports.weakref >=1.0rc1  # [py==27]
         - enum34 >=1.1.6  # [py==27]
-        - tensorflow-estimator >=1.13.0,<1.14.0a0
-        - tensorboard >=1.13.0,<1.14.0a0
+        - tensorflow-estimator >=1.14.0rc0,<1.15.0a0
+        - tensorboard >=1.14.0,<1.15.0a0
     test:
       imports:
         - tensorflow
