Update selector syntax

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,11 +15,11 @@ source:
   url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz  # [linux]
   sha256: 7cd19978e6bc7edc2c847bce19f95515a742b34ea5e28e4389dade35348f58ed  # [linux]
   url: https://pypi.io/packages/{{ pyver }}/t/tensorflow/{{ fn }}  # [not linux]
-  sha256: 0f305f3c461ed2ce5e0b65fccc7b7452f483c7935dd8a52a466d622e642fdea8  # [osx and py27]    
-  sha256: ba29e66331cd2a8f824e0fa937ce44bd624bc37739f2f083694e473051d89ace  # [osx and py36]  
-  sha256: 0de5887495c20e1130ae4d9bcfaf80cec87f579a9c27a84141a588a46e5aa853  # [osx and py37]
-  sha256: d7341617aedd73c2c847755e87697e9c19eb625c73da26d6cd669220c5565119  # [win and py36]
-  sha256: 4325f20b5a703b80a5f7a8807f07ad8735025bd2a947093ffff1c26fbdc7980b  # [win and py37]
+  sha256: 0f305f3c461ed2ce5e0b65fccc7b7452f483c7935dd8a52a466d622e642fdea8  # [osx and py==27]    
+  sha256: ba29e66331cd2a8f824e0fa937ce44bd624bc37739f2f083694e473051d89ace  # [osx and py==36]  
+  sha256: 0de5887495c20e1130ae4d9bcfaf80cec87f579a9c27a84141a588a46e5aa853  # [osx and py==37]
+  sha256: d7341617aedd73c2c847755e87697e9c19eb625c73da26d6cd669220c5565119  # [win and py==36]
+  sha256: 4325f20b5a703b80a5f7a8807f07ad8735025bd2a947093ffff1c26fbdc7980b  # [win and py==37]
 
   patches:
     - patches/0001-add-rt-to-linkopts.patch                                     # [linux]
@@ -33,7 +33,7 @@ source:
     - patches/unbundle_llvm.patch                                               # [linux]
 
 build:
-  number: 7
+  number: 8
   skip: True  # [not x86_64]
   skip: True  # [win and vc<14]
 
@@ -69,9 +69,9 @@ requirements:
     - termcolor >=1.1.0
     - grpcio >=1.8.6
     - wheel >=0.26              # [linux]
-    - mock >=2.0.0  # [py2k]
-    - backports.weakref >=1.0rc1  # [py2k]
-    - enum34 >=1.1.6  # [py2k]
+    - mock >=2.0.0  # [py==27]
+    - backports.weakref >=1.0rc1  # [py==27]
+    - enum34 >=1.1.6  # [py==27]
     - tensorflow-estimator >=1.13.0,<1.14.0a0
   run:
     - {{ pin_subpackage('tensorflow-base', exact=True) }}
@@ -115,9 +115,9 @@ outputs:
         - termcolor >=1.1.0
         - grpcio >=1.8.6
         - wheel >=0.26              # [unix]
-        - mock >=2.0.0  # [py2k]
-        - backports.weakref >=1.0rc1  # [py2k]
-        - enum34 >=1.1.6  # [py2k]
+        - mock >=2.0.0  # [py==27]
+        - backports.weakref >=1.0rc1  # [py==27]
+        - enum34 >=1.1.6  # [py==27]
         - tensorflow-estimator >=1.13.0,<1.14.0a0
         # pin
         - zlib                     # [linux]
@@ -139,9 +139,9 @@ outputs:
         - protobuf >=3.6.1
         - termcolor >=1.1.0
         - grpcio >=1.8.6
-        - mock >=2.0.0  # [py2k]
-        - backports.weakref >=1.0rc1  # [py2k]
-        - enum34 >=1.1.6  # [py2k]
+        - mock >=2.0.0  # [py==27]
+        - backports.weakref >=1.0rc1  # [py==27]
+        - enum34 >=1.1.6  # [py==27]
         - tensorflow-estimator >=1.13.0,<1.14.0a0
         - tensorboard >=1.13.0,<1.14.0a0
     test:
