--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.13.1" %}
+{% set version = "1.13.2" %}
 
 {% set pyver = "cp{}{}".format(PY_VER[0], PY_VER[2]) %}
 {% set platform = "macosx_10_11_x86_64" %}  # [osx] 
@@ -13,13 +13,13 @@ package:
 source:
   fn: {{ fn }}
   url: https://github.com/tensorflow/tensorflow/archive/v{{ version }}.tar.gz  # [linux]
-  sha256: 7cd19978e6bc7edc2c847bce19f95515a742b34ea5e28e4389dade35348f58ed  # [linux]
+  sha256: abe3bf0c47845a628b7df4c57646f41a10ee70f914f1b018a5c761be75e1f1a9  # [linux]
   url: https://pypi.io/packages/{{ pyver }}/t/tensorflow/{{ fn }}  # [not linux]
-  sha256: 0f305f3c461ed2ce5e0b65fccc7b7452f483c7935dd8a52a466d622e642fdea8  # [osx and py==27]    
-  sha256: ba29e66331cd2a8f824e0fa937ce44bd624bc37739f2f083694e473051d89ace  # [osx and py==36]  
-  sha256: 0de5887495c20e1130ae4d9bcfaf80cec87f579a9c27a84141a588a46e5aa853  # [osx and py==37]
-  sha256: d7341617aedd73c2c847755e87697e9c19eb625c73da26d6cd669220c5565119  # [win and py==36]
-  sha256: 4325f20b5a703b80a5f7a8807f07ad8735025bd2a947093ffff1c26fbdc7980b  # [win and py==37]
+  sha256: ffff3545f0ade3c1d2919dfb8c9399a923d929d221e349fcd4ae5f69774996e1  # [osx and py==27]
+  sha256: 8e02c7fab31a02396cd926412762f8fd9cae3cb653be3c57797b85a95834be79  # [osx and py==36]
+  sha256: ef1566863acdfb84924e8bbfcafc8da90933ba4313f094a74086b083c7a4f776  # [osx and py==37]
+  sha256: 1e6ab2b4e2ece7747b787a5e85d01aeb8b47677fa15453417a485cde904635f7  # [win and py==36]
+  sha256: 0beda4bf6a5af64905b93988e3b878e91b13e44b42d16df439fbd3112062754d  # [win and py==37]
 
   patches:
     - patches/0001-add-rt-to-linkopts.patch                                     # [linux]
@@ -33,7 +33,7 @@ source:
     - patches/unbundle_llvm.patch                                               # [linux]
 
 build:
-  number: 8
+  number: 0
   skip: True  # [not x86_64]
   skip: True  # [win and vc<14]
 
@@ -55,15 +55,12 @@ requirements:
     - gast >=0.2.0
     - keras-applications >=1.0.6
     - keras-preprocessing >=1.0.5
-    - numpy 1.13.3  # [py<37]
     - llvmdev >=8.0.0,<9.0.0    # [linux]
     - zlib                      # [linux]
     - libpng                    # [linux]
     - libcurl                   # [linux]
     - nsync  # [linux]
-    # The requirement is numpy >=1.13 but no builds of numPy 1.13 are
-    # available for Python 3.7
-    - numpy 1.14.6  # [py==37]
+    - numpy 1.16.1
     - six >=1.10.0
     - protobuf >=3.6.1
     - termcolor >=1.1.0
@@ -106,10 +103,7 @@ outputs:
         - gast >=0.2.0
         - keras-applications >=1.0.6
         - keras-preprocessing >=1.0.5
-        - numpy 1.13.3  # [py<37]
-        # The requirement is numpy >=1.13 but no builds of numPy 1.13 are
-        # available for Python 3.7
-        - numpy 1.14.6  # [py==37]
+        - numpy 1.16.1
         - six >=1.10.0
         - protobuf >=3.6.1
         - termcolor >=1.1.0
@@ -131,7 +125,7 @@ outputs:
         - keras-applications >=1.0.6
         - keras-preprocessing >=1.0.5
         - {{ pin_compatible('numpy') }}  # [linux]
-        - numpy >=1.13.3            # [not linux]
+        - numpy >=1.16.1            # [not linux]
         - six >=1.10.0
         - zlib  # [linux]
         - libpng  # [linux]
