--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -83,7 +83,7 @@ outputs:
         - toco = tensorflow.lite.python.tflite_convert:main
         - saved_model_cli = tensorflow.python.tools.saved_model_cli:main
         - tf_upgrade_v2 = tensorflow.tools.compatibility.tf_upgrade_v2_main:main
-        - tensorboard = tensorboard.main:run_main
+        #- tensorboard = tensorboard.main:run_main
     requirements:
       # build requirements needs to pick up the compiler run_exports
       build:
