--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ source:
     #- patches/0006-relax-precision-in-matrix_log_op_test.patch                  # [linux]
     #- patches/0007-Add-init-symbol-names-prefixed-with-an-underscore.patch      # [osx]
     #- patches/0008-Add-alternate-clock_gettime-implementation-for-macOS.patch   # [osx]
-    #- patches/unbundle_llvm.patch                                               # [linux]
+    - patches/unbundle_llvm.patch                                               # [linux]
 
 build:
   number: 0
