--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ source:
     - patches/0002-stable-image-rotate-test.patch                               # [linux]
     - patches/0003-relax-tolerence-in-special_math_test.patch                   # [linux]
     - patches/0004-skip-read-only-debugger_cli_common-test.patch                # [linux]
-    - patches/0005-fix-lookup_ops-test.patch                                    # [linux]
+    #- patches/0005-fix-lookup_ops-test.patch                                    # [linux]
     - patches/0006-relax-precision-in-matrix_log_op_test.patch                  # [linux]
     #- patches/0007-Add-init-symbol-names-prefixed-with-an-underscore.patch      # [osx]
     #- patches/0008-Add-alternate-clock_gettime-implementation-for-macOS.patch   # [osx]
