Revert (morally speaking) "use bazel from conda-forge"
Unfortunately, bazel 3.1.0 isn't built in conda-forge,
starts again at 3.4.1 for unix, 3.6.0 for windows

This reverts commit 94bd4c8bc3a10c87076706852f2078339071c803.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     # see https://github.com/tensorflow/tensorflow/blob/v{{ version }}/.bazelversion
-    - bazel ==3.1.0
+    #- bazel ==3.1.0
     - nasm
     - swig
   host:
