--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - zlib
     - libpng
     - libcurl
+    - curl         # [win]
     - unzip        # [not win]
     - zip          # [not win]
     - m2-unzip     # [win]
