--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,8 +68,8 @@ requirements:
 
 outputs:
   - name: tensorflow-base
-    files:
-      - "lib/python*/site-packages/tensorflow"
+    script: build_pkg.sh  # [not win]
+    script: build_pkg.bat  # [win]
     build:
       entry_points:
         - toco_from_protos = tensorflow.lite.toco.python.toco_from_protos:main
