update tests; update build c lib scripts

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -134,7 +134,8 @@ outputs:
       imports:
         - tensorflow
       commands:
-        - freeze_graph --help
+        - tf_upgrade_v2 --help
+        - estimator_ckpt_converter --help
         - saved_model_cli --help
         - tflite_convert --help     # [not win]
         - toco_from_protos --help   # [not win]
