--- a/recipe/custom_clang_toolchain/BUILD
+++ b/recipe/custom_clang_toolchain/BUILD
@@ -15,6 +15,14 @@ filegroup(
     srcs = glob(["extra_tools/**"]) + [":cc_wrapper"],
 )
 
+load(
+    ":cc_toolchain_config.bzl", "cc_toolchain_config"
+    )
+
+cc_toolchain_config(
+    name = "cc-compiler-darwin-config"
+    )
+
 cc_toolchain_suite(
     name = "toolchain",
     toolchains = {
@@ -27,13 +35,11 @@ cc_toolchain(
     name = "cc-compiler-darwin",
     all_files = ":compiler_deps",
     compiler_files = ":compiler_deps",
-    cpu = "darwin",
     toolchain_identifier = "local",
+    toolchain_config = ":cc-compiler-darwin-config",
     dwp_files = ":empty",
-    dynamic_runtime_libs = [":empty"],
     linker_files = ":compiler_deps",
     objcopy_files = ":empty",
-    static_runtime_libs = [":empty"],
     strip_files = ":empty",
     supports_param_files = 0,
 )
