--- a/.ci_support/linux_64_python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_python3.8.____cpython.yaml
@@ -14,15 +14,29 @@ cxx_compiler_version:
 - '9'
 docker_image:
 - quay.io/condaforge/linux-anvil-comp7
+giflib:
+- '5.2'
+grpc_cpp:
+- '1.36'
 libcurl:
 - '7'
+libjpeg_turbo:
+- '2'
 libpng:
 - '1.6'
+libprotobuf:
+- '3.15'
+openssl:
+- 1.1.1
 pin_run_as_build:
   libcurl:
     max_pin: x
+  libjpeg_turbo:
+    max_pin: x
   libpng:
     max_pin: x.x
+  openssl:
+    max_pin: x.x.x
   python:
     min_pin: x.x
     max_pin: x.x
@@ -30,6 +44,8 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - 3.8.* *_cpython
+snappy:
+- '1'
 target_platform:
 - linux-64
 zip_keys:
