--- a/.ci_support/osx_64_python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_python3.8.____cpython.yaml
@@ -1,16 +1,55 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+c_compiler:
+- clang
+c_compiler_version:
+- '11'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- clangxx
+cxx_compiler_version:
+- '11'
+giflib:
+- '5.2'
+grpc_cpp:
+- '1.36'
+libcurl:
+- '7'
+libjpeg_turbo:
+- '2'
+libpng:
+- '1.6'
+libprotobuf:
+- '3.15'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+openssl:
+- 1.1.1
 pin_run_as_build:
+  libcurl:
+    max_pin: x
+  libjpeg_turbo:
+    max_pin: x
+  libpng:
+    max_pin: x.x
+  openssl:
+    max_pin: x.x.x
   python:
     min_pin: x.x
     max_pin: x.x
+  zlib:
+    max_pin: x.x
 python:
 - 3.8.* *_cpython
+snappy:
+- '1'
 target_platform:
 - osx-64
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
+zlib:
+- '1.2'
