--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @farhantejani @ghego @gilbertfrancois @hajapy @jschueller @njzjz @waitingkuo
+* @farhantejani @ghego @gilbertfrancois @hajapy @jschueller @njzjz @waitingkuo @xhochy
