Add pybind11 to TF_SYSTEMLIBS

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,6 +70,7 @@ requirements:
     - cython >=0.28.4
     - dill >=0.3.1.1
     - snappy
+    - pybind11
     # upstream wants exact pin for gast
     - gast ==0.3.3
     # TF-API needs to move in sync
