--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,12 +65,13 @@ requirements:
     - grpc-cpp
     - libprotobuf
     - giflib
-    - libjpeg-turbo
+    - jpeg
     - openssl
     - cython >=0.28.4
     - dill >=0.3.1.1
     - snappy
     - pybind11
+    - zlib
     # upstream wants exact pin for gast
     - gast ==0.3.3
     # TF-API needs to move in sync
@@ -122,12 +123,14 @@ outputs:
         - grpc-cpp
         - libprotobuf
         - giflib
-        - libjpeg-turbo
+        - jpeg
         - openssl
         - cython >=0.28.4
         - dill >=0.3.1.1
         - snappy
         - pybind11
+        - zlib
+        - libcurl
         # upstream wants exact pin for gast
         - gast ==0.3.3
         # TF-API needs to move in sync
@@ -175,17 +178,24 @@ outputs:
         - {{ compiler('cxx') }}
       # host requirements to pick up run_exports
       host:
+        - grpc-cpp
+        - libprotobuf
+        - giflib
+        - jpeg
         - libcurl
+        - openssl
+        - snappy
         - zlib
 
     test:
       files:
+        - test_libtensorflow.sh
         - test_c.c
       requires:
         - {{ compiler('c') }}
       commands:
         - test -f $PREFIX/lib/libtensorflow.so  # [not win]
-        - $CC -o test_c -L${PREFIX}/lib/ -ltensorflow -I${PREFIX}/include/ test_c.c && ./test_c  # [not win]
+        - ./test_libtensorflow.sh  # [not win]
 
   - name: libtensorflow_cc
     script: cp_libtensorflow_cc.sh
@@ -199,16 +209,23 @@ outputs:
         - rsync
       # host requirements to pick up run_exports
       host:
+        - grpc-cpp
+        - libprotobuf
         - libcurl
+        - jpeg
+        - snappy
+        - openssl
+        - giflib
         - zlib
     test:
       files:
+        - test_libtensorflow_cc.sh
         - test_cc.cc
       requires:
         - {{ compiler('cxx') }}
       commands:
         - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win]
-        - $CXX -std=c++11 -o test_cc -L${PREFIX}/lib/ -ltensorflow_cc -ltensorflow_framework -lrt -I${PREFIX}/include/ test_cc.cc && ./test_cc  # [not win]
+        - ./test_libtensorflow_cc.sh  # [not win]
 
 about:
   home: http://tensorflow.org/
