Deactivate unused llvm patches

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,8 +12,8 @@ source:
     - patches/0001-relax-tolerence-in-special_math_test.patch
     - patches/0002-skip-read-only-debugger_cli_common-test.patch
     - patches/0003-relax-precision-in-matrix_log_op_test.patch
-    - patches/0004-Unbundle-LLVM.patch
-    - patches/0005-rerun-generate_llvm_build.py.patch
+    #- patches/0004-Unbundle-LLVM.patch
+    #- patches/0005-rerun-generate_llvm_build.py.patch
     - patches/osx-arm64.patch  # [osx and arm64]
     - patches/osx-arm64-2.patch  # [osx and arm64]
 
